--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  scoped_model: ^1.0.1
+  animations: ^1.0.0+5
   flutter_staggered_grid_view: ^0.3.0
   get_it: ^3.0.1
   provider: ^4.0.1
+  sqflite: ^1.3.0
 
 dev_dependencies:
   flutter_test:
