--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   get_it: ^3.0.1
   provider: ^4.0.1
   sqflite: ^1.3.0
+  google_fonts: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +49,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - google_fonts/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
